--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Employee_app
 spring.datasource.url=jdbc:postgresql://localhost:5432/emp
 spring.datasource.username=postgres
-spring.datasource.password=Olayilukholo@1996
+spring.datasource.password=**********
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
